update game mechanic
